--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <style>
         body {
-        background-image:url('https://wallpaperaccess.com/full/4180229.jpg');
+        background-image:url('https://img.freepik.com/vecteurs-libre/fond-degrade-couleur-multi-pastel_1962-502.jpg?w=2000');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center;
