--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         background-image:url('https://img.freepik.com/vecteurs-libre/fond-degrade-couleur-multi-pastel_1962-502.jpg?w=2000');
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-position: center;
+        background-position: center;}
         
     
      </style>
