--- a/les chaps.html
+++ b/les chaps.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <style type="text/css"> 
         a:link 
         { 
@@ -10,13 +11,16 @@
         background-image:url('https://a-static.besthdwallpaper.com/one-piece-going-merry-fond-d-ecran-3840x2160-8481_54.jpg');
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-position: center;
+        background-position: center; }
         </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <center>
     <title>Les chapitres</title>
+    <br>
+    <a><h1>One Pièce VF</h1></a>
+    <br>
     <a href="test.html" class="btn"><h1>CHAPITRE 1</h1></a>
     <a href="chap2.html" class="btn"><h1>CHAPITRE 2</h1></a>
     <a href="chap3.html" class="btn"><h1>CHAPITRE 3</h1></a>
@@ -27,6 +31,12 @@
     <a href="chap8.html" class="btn"><h1>CHAPITRE 8</h1></a>
     <a href="chap9.html" class="btn"><h1>CHAPITRE 9</h1></a>
     <a href="chap10.html" class="btn"><h1>CHAPITRE 10</h1></a>
+    <a href="chap11.html" class="btn"><h1>CHAPITRE 11</h1></a>
+    <a href="chap12.html" class="btn"><h1>CHAPITRE 12</h1></a>
+    <a href="chap13.html" class="btn"><h1>CHAPITRE 13</h1></a>
+    <a href="chap14.html" class="btn"><h1>CHAPITRE 14</h1></a>
+    <a href="chap15.html" class="btn"><h1>CHAPITRE 15</h1></a>
+    <a href="chap16.html" class="btn"><h1>CHAPITRE 16</h1></a>
     <a href="index.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
     </center>
 </head>
