--- a/les chaps.html
+++ b/les chaps.html
@@ -37,6 +37,13 @@
     <a href="chap14.html" class="btn"><h1>CHAPITRE 14</h1></a>
     <a href="chap15.html" class="btn"><h1>CHAPITRE 15</h1></a>
     <a href="chap16.html" class="btn"><h1>CHAPITRE 16</h1></a>
+    <a href="chap17.html" class="btn"><h1>CHAPITRE 17</h1></a>
+    <a href="chap18.html" class="btn"><h1>CHAPITRE 18</h1></a>
+    <a href="chap19.html" class="btn"><h1>CHAPITRE 19</h1></a>
+    <a href="chap20.html" class="btn"><h1>CHAPITRE 20</h1></a>
+    <a href="chap21.html" class="btn"><h1>CHAPITRE 21</h1></a>
+    <a href="chap22.html" class="btn"><h1>CHAPITRE 22</h1></a>
+    <a href="chap23.html" class="btn"><h1>CHAPITRE 23</h1></a>
     <a href="index.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
     </center>
 </head>
