--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <style>
         body {
-        background-image:url('https://img.freepik.com/vecteurs-libre/fond-degrade-couleur-multi-pastel_1962-502.jpg?w=2000');
+        background-image:url('https://img.freepik.com/photos-gratuite/image-arriere-plan-degrade-clair-propre-hd_181020-1366.jpg?w=2000');
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-position: center;}
+        background-position: center;
         
     
      </style>
