--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <style>
         body {
-        background-image:url('https://img.freepik.com/photos-gratuite/image-arriere-plan-degrade-clair-propre-hd_181020-1366.jpg?w=2000');
+        background-image:url('https://www.xmple.com/wallpaper/green-linear-gradient-cyan-5120x2160-c2-57e730-30c8e7-a-255-f-14.svg');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center;
@@ -25,6 +25,7 @@ a:link
  text-decoration:none; 
 } 
 </style>
+
 <center>
 <h1><a href="les chaps.html" class="btn">ONE PIECE</a></h1>
 <h1><a href="les chaps ac.html" class="btn">DRAGON BALL</a></h1>
@@ -33,3 +34,4 @@ a:link
 
 </body>
 </html>
+
