--- a/les chaps.html
+++ b/les chaps.html
@@ -44,6 +44,13 @@
     <a href="chap21.html" class="btn"><h1>CHAPITRE 21</h1></a>
     <a href="chap22.html" class="btn"><h1>CHAPITRE 22</h1></a>
     <a href="chap23.html" class="btn"><h1>CHAPITRE 23</h1></a>
+    <a href="chap24.html" class="btn"><h1>CHAPITRE 24</h1></a>
+    <a href="chap25.html" class="btn"><h1>CHAPITRE 25</h1></a>
+    <a href="chap26.html" class="btn"><h1>CHAPITRE 26</h1></a>
+    <a href="chap27.html" class="btn"><h1>CHAPITRE 27</h1></a>
+    <a href="chap28.html" class="btn"><h1>CHAPITRE 28</h1></a>
+    <a href="chap29.html" class="btn"><h1>CHAPITRE 29</h1></a>
+    <a href="chap30.html" class="btn"><h1>CHAPITRE 30</h1></a>
     <a href="index.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
     </center>
 </head>
