--- a/les chaps.html
+++ b/les chaps.html
@@ -51,6 +51,10 @@
     <a href="chap28.html" class="btn"><h1>CHAPITRE 28</h1></a>
     <a href="chap29.html" class="btn"><h1>CHAPITRE 29</h1></a>
     <a href="chap30.html" class="btn"><h1>CHAPITRE 30</h1></a>
+    <a href="chap1050.html" class="btn"><h1>CHAPITRE 1050</a></h1>
+    <a href="chap1051.html" class="btn"><h1>CHAPITRE 1051</a></h1>
+    <a href="chap1052.html" class="btn"><h1>CHAPITRE 1052</a></h1>
+    <a href="chap1053.html" class="btn"><h1>CHAPITRE 1053</a></h1>
     <a href="index.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
     </center>
 </head>
