--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@ a:link
 <center>
 <h1><a href="les chaps.html" class="btn">ONE PIECE</a></h1>
 <h1><a href="les chaps ac.html" class="btn">DRAGON BALL</a></h1>
+<h1>Les dernières sorties </h1>
+
+<h1><a href="chap1050.html" class="btn">One Pièce VF CHAPITRE 1050</a></h1>
+<h1><a href="chap1051.html" class="btn">One Pièce VF CHAPITRE 1051</a></h1>
+<h1><a href="chap1052.html" class="btn">One Pièce VF CHAPITRE 1052</a></h1>
+<h1><a href="chap1053.html" class="btn">One Pièce VF CHAPITRE 1053</a></h1>
 </center>
 
 
