--- a/les chaps.html
+++ b/les chaps.html
@@ -51,6 +51,16 @@
     <a href="chap28.html" class="btn"><h1>CHAPITRE 28</h1></a>
     <a href="chap29.html" class="btn"><h1>CHAPITRE 29</h1></a>
     <a href="chap30.html" class="btn"><h1>CHAPITRE 30</h1></a>
+    <a href="chap31.html" class="btn"><h1>CHAPITRE 31</h1></a>
+    <a href="chap32.html" class="btn"><h1>CHAPITRE 32</h1></a>
+    <a href="chap33.html" class="btn"><h1>CHAPITRE 33</h1></a>
+    <a href="chap34.html" class="btn"><h1>CHAPITRE 34</h1></a>
+    <a href="chap35.html" class="btn"><h1>CHAPITRE 35</h1></a>
+    <a href="chap36.html" class="btn"><h1>CHAPITRE 36</h1></a>
+    <a href="chap37.html" class="btn"><h1>CHAPITRE 37</h1></a>
+    <a href="chap38.html" class="btn"><h1>CHAPITRE 38</h1></a>
+    <a href="chap39.html" class="btn"><h1>CHAPITRE 39</h1></a>
+    <a href="chap40.html" class="btn"><h1>CHAPITRE 40</h1></a>
     <a href="chap1050.html" class="btn"><h1>CHAPITRE 1050</a></h1>
     <a href="chap1051.html" class="btn"><h1>CHAPITRE 1051</a></h1>
     <a href="chap1052.html" class="btn"><h1>CHAPITRE 1052</a></h1>
