--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ a:link
 <center>
 <h2><a href="les chaps.html" class="btn">ONE PIECE</a></h2>
 <h2><a href="les chaps ac.html" class="btn">DRAGON BALL</a></h2>
+<h2><a href="leschapsnaruto.html" class="btn">NARUTO</a></h2>
 <h2>Les dernières sorties </h2>
 
 <h3><a href="chap1050.html" class="btn">One Pièce VF CHAPITRE 1050</a></h3>
