--- a/les chaps.html
+++ b/les chaps.html
@@ -17,7 +17,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <center>
-    <title>Les chapitres</title>
+    <title>Les chapitres ONE PIECE</title>
     <br>
     <a><h1>One Pièce VF</h1></a>
     <br>
@@ -71,11 +71,17 @@
     <a href="chap48.html" class="btn"><h2>CHAPITRE 48</h2></a>
     <a href="chap49.html" class="btn"><h2>CHAPITRE 49</h2></a>
     <a href="chap50.html" class="btn"><h2>CHAPITRE 50</h2></a>
+    <a href="chap51.html" class="btn"><h2>CHAPITRE 51</h2></a>
+    <a href="chap52.html" class="btn"><h2>CHAPITRE 52</h2></a>
+    <a href="chap53.html" class="btn"><h2>CHAPITRE 53</h2></a>
+    <a href="chap54.html" class="btn"><h2>CHAPITRE 54</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 55</h2></a>
     <a href="chap1050.html" class="btn"><h2>CHAPITRE 1050</a></h2>
     <a href="chap1051.html" class="btn"><h2>CHAPITRE 1051</a></h2>
     <a href="chap1052.html" class="btn"><h2>CHAPITRE 1052</a></h2>
     <a href="chap1053.html" class="btn"><h2>CHAPITRE 1053</a></h2>
     <a href="index.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
+    <a href="index.html" class="btn"><h1>Revenir à l'acueil</h1></a>
     </center>
 </head>
 <body>
