--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <font face="Delmon Delicate">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,7 @@
 
          <br>
         <br>
-    <h1>Liste des mangas en VF</h1></center>
+    <h1><font face="calibri">Mangas en VF</font></h1></center>
 
     <style>
         body {
@@ -32,15 +33,18 @@ a:link
 </style>
 
 <center>
-<h2><a href="les chaps.html" class="btn">ONE PIECE</a></h2>
-<h2><a href="les chaps ac.html" class="btn">DRAGON BALL</a></h2>
-<h2><a href="leschapsnaruto.html" class="btn">NARUTO</a></h2>
-<h2>Les dernières sorties </h2>
-
-<h3><a href="chap1050.html" class="btn">One Pièce VF CHAPITRE 1050</a></h3>
-<h3><a href="chap1051.html" class="btn">One Pièce VF CHAPITRE 1051</a></h3>
-<h3><a href="chap1052.html" class="btn">One Pièce VF CHAPITRE 1052</a></h3>
-<h3><a href="chap1053.html" class="btn">One Pièce VF CHAPITRE 1053</a></h3>
+<h3><a href="les chaps.html" class="btn"><font face="calibri">ONE PIECE</font></a></h3>
+<h3><a href="les chaps ac.html" class="btn"><font face="calibri">DRAGON BALL</font></a></h3>
+<h3><a href="leschapsnaruto.html" class="btn"><font face="calibri">NARUTO</font></a></h3>
+<h1><font face="calibri">Les dernières sorties</font> </h1>
+<h2><font face="calibri">ONE PIECE</font></h2>
+<h3><a href="chap1050.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1050</font></a></h3>
+<h3><a href="chap1051.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1051</font></a></h3>
+<h3><a href="chap1052.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1052</font></a></h3>
+<h3><a href="chap1053.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1053</font></a></h3>
+<H2><font face="calibri">NARUTO</font></H2>
+<h3><a href="nar1.html" class="btn"><font face="calibri">Naruto VF TOME 1</font></a></h3>
+<h3><a href="nar2.html" class="btn"><font face="calibri">Naruto VF TOME 2</font></a></h3>
 </center>
 
 
