--- a/les chaps.html
+++ b/les chaps.html
@@ -8,10 +8,14 @@
          text-decoration:none; 
         } 
         body {
-        background-image:url('https://a-static.besthdwallpaper.com/one-piece-going-merry-fond-d-ecran-3840x2160-8481_54.jpg');
+        background-image:url('https://cdn.discordapp.com/attachments/868578469213265970/997946302031745054/unknown.png');
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-position: center; }
+        background-position: center;
+        background-size: cover;
+        /* Full height */
+  height: 100%;
+    }
         </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +23,7 @@
     <center>
     <title>Les chapitres ONE PIECE</title>
     <br>
-    <a><h1>One Pièce VF</h1></a>
+    <a><h1><font face="calibri">One Pièce VF</h1></a>
     <br>
     <a href="test.html" class="btn"><h2>CHAPITRE 1</h2></a>
     <a href="chap2.html" class="btn"><h2>CHAPITRE 2</h2></a>
@@ -81,7 +85,7 @@
     <a href="chap1052.html" class="btn"><h2>CHAPITRE 1052</a></h2>
     <a href="chap1053.html" class="btn"><h2>CHAPITRE 1053</a></h2>
     <a href="index.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
-    <a href="index.html" class="btn"><h1>Revenir à l'acueil</h1></a>
+    <a href="index.html" class="btn"><h1>Revenir à l'acueil</font></h1></a>
     </center>
 </head>
 <body>
