--- a/les chaps ac.html
+++ b/les chaps ac.html
@@ -7,10 +7,13 @@
          text-decoration:none; 
         } 
         body {
-        background-image:url('https://www.wallpapertip.com/wmimgs/181-1814306_free-dragon-ball-z-kame-house-computer-desktop.jpg');
+        background-image:url('https://cdn.discordapp.com/attachments/868578469213265970/997946302031745054/unknown.png');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center;
+        background-size: cover;
+        /* Full height */
+  height: 100%;
         }
         </style>
     <meta charset="UTF-8">
@@ -18,13 +21,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Les chapitres DRAGON BALL</title>
     <center>
-    <a><h1>Draggon Ball VF</h1></a>
+    <a><h1><font face="calibri">Draggon Ball VF</h1></a>
     <a href="ac chap 1.html" class="btn"><h1>TOME 1</h1></a>
     <a href="ac chap 2.html" class="btn"><h1>TOME 2</h1></a>
     <a href="db3.html" class="btn"><h1>TOME 3</h1></a>
    
     
-    <a href="index.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
+    <a href="index.html" class="btn"><h2>Retourner à la liste des mangas</font></h2></a>
 </center>
 </head>
 <body>
