--- a/leschapsnaruto.html
+++ b/leschapsnaruto.html
@@ -8,10 +8,14 @@
          text-decoration:none; 
         } 
         body {
-        background-image:url('https://www.xtrafondos.com/wallpapers/resoluciones/21/naruto-uzumaki-baryon-mode_1920x1080_8736.jpg');
+        background-image:url('https://cdn.discordapp.com/attachments/868578469213265970/997946302031745054/unknown.png');
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-position: center; }
+        background-position: center; 
+        background-size: cover;
+        /* Full height */
+  height: 100%;
+    }
         </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,13 +23,13 @@
     <center>
     <title>Les chapitres NARUTO</title>
     <br>
-    <a><h1>Naruto VF</h1></a>
+    <a><h1><font face="calibri">Naruto VF</h1></a>
     <br>
     <a href="nar1.html" class="btn"><h2>TOME 1</h2></a>
     <a href="nar2.html" class="btn"><h2>TOME 2</h2></a>
     
     <a href="index.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
-    <a href="index.html" class="btn"><h1>Revenir à l'acueil</h1></a>
+    <a href="index.html" class="btn"><h1>Revenir à l'acueil</font></h1></a>
     </center>
 </head>
 <body>
