--- a/les chaps.html
+++ b/les chaps.html
@@ -80,6 +80,21 @@
     <a href="chap53.html" class="btn"><h2>CHAPITRE 53</h2></a>
     <a href="chap54.html" class="btn"><h2>CHAPITRE 54</h2></a>
     <a href="chap55.html" class="btn"><h2>CHAPITRE 55</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 56</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 57</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 58</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 59</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 60</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 61</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 62</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 63</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 64</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 65</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 66</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 67</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 68</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 69</h2></a>
+    <a href="chap55.html" class="btn"><h2>CHAPITRE 70</h2></a>
     <a href="chap1050.html" class="btn"><h2>CHAPITRE 1050</a></h2>
     <a href="chap1051.html" class="btn"><h2>CHAPITRE 1051</a></h2>
     <a href="chap1052.html" class="btn"><h2>CHAPITRE 1052</a></h2>
