--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@ a:link
 
 <center>
 
-
 <h3><a href="les chaps.html" class="btn"><font face="calibri">ONE PIECE</font></a></h3>
 <h3><a href="les chaps ac.html" class="btn"><font face="calibri">DRAGON BALL</font></a></h3>
 <h3><a href="leschapsnaruto.html" class="btn"><font face="calibri">NARUTO</font></a></h3>
@@ -60,10 +59,16 @@ a:link
 <h3><a href="nar1.html" class="btn"><font face="calibri">Naruto VF TOME 1</font></a></h3>
 <h3><a href="nar2.html" class="btn"><font face="calibri">Naruto VF TOME 2</font></a></h3>
 <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
-</center>
 
+<h1><font face="calibri">Soyez au courant des nouvelles</font></h1>
+<img src="https://cdn.discordapp.com/attachments/888479569730998352/998328276944695306/580b57fcd9996e24bc43c53e.png"width="55" height="50" /></p>
+<p><a href="https://twitter.com/novanims" class="btn"><h1><font face="calibri">Twitter</font></h1></a></p>
+
+</center>
 
 </body>
 </html>
+
+
 
 
