--- a/les chaps.html
+++ b/les chaps.html
@@ -95,10 +95,21 @@
     <a href="chap68.html" class="btn"><h2>CHAPITRE 68</h2></a>
     <a href="chap69.html" class="btn"><h2>CHAPITRE 69</h2></a>
     <a href="chap70.html" class="btn"><h2>CHAPITRE 70</h2></a>
+    <a href="chap71.html" class="btn"><h2>CHAPITRE 71</h2></a>
+    <a href="chap72.html" class="btn"><h2>CHAPITRE 72</h2></a>
+    <a href="chap73.html" class="btn"><h2>CHAPITRE 73</h2></a>
+    <a href="chap74.html" class="btn"><h2>CHAPITRE 74</h2></a>
+    <a href="chap75.html" class="btn"><h2>CHAPITRE 75</h2></a>
+    <a href="chap76.html" class="btn"><h2>CHAPITRE 76</h2></a>
+    <a href="chap77.html" class="btn"><h2>CHAPITRE 77</h2></a>
+    <a href="chap78.html" class="btn"><h2>CHAPITRE 78</h2></a>
+    <a href="chap79.html" class="btn"><h2>CHAPITRE 79</h2></a>
+    <a href="chap80.html" class="btn"><h2>CHAPITRE 80</h2></a>
     <a href="chap1050.html" class="btn"><h2>CHAPITRE 1050</a></h2>
     <a href="chap1051.html" class="btn"><h2>CHAPITRE 1051</a></h2>
     <a href="chap1052.html" class="btn"><h2>CHAPITRE 1052</a></h2>
     <a href="chap1053.html" class="btn"><h2>CHAPITRE 1053</a></h2>
+    <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
     <a href="index.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
     <a href="index.html" class="btn"><h1>Revenir à l'acueil</font></h1></a>
     </center>
