--- a/leschapsnaruto.html
+++ b/leschapsnaruto.html
@@ -27,7 +27,7 @@
     <br>
     <a href="nar1.html" class="btn"><h2>TOME 1</h2></a>
     <a href="nar2.html" class="btn"><h2>TOME 2</h2></a>
-    
+    <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
     <a href="index.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
     <a href="index.html" class="btn"><h1>Revenir à l'acueil</font></h1></a>
     </center>
@@ -36,3 +36,4 @@
     
 </body>
 </html>
+
