--- a/les chaps ac.html
+++ b/les chaps ac.html
@@ -25,8 +25,7 @@
     <a href="ac chap 1.html" class="btn"><h1>TOME 1</h1></a>
     <a href="ac chap 2.html" class="btn"><h1>TOME 2</h1></a>
     <a href="db3.html" class="btn"><h1>TOME 3</h1></a>
-   
-    
+    <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
     <a href="index.html" class="btn"><h2>Retourner à la liste des mangas</font></h2></a>
 </center>
 </head>
