--- a/les chaps.html
+++ b/les chaps.html
@@ -105,6 +105,26 @@
     <a href="chap78.html" class="btn"><h2>CHAPITRE 78</h2></a>
     <a href="chap79.html" class="btn"><h2>CHAPITRE 79</h2></a>
     <a href="chap80.html" class="btn"><h2>CHAPITRE 80</h2></a>
+    <a href="chap81.html" class="btn"><h2>CHAPITRE 81</h2></a>
+    <a href="chap82.html" class="btn"><h2>CHAPITRE 82</h2></a>
+    <a href="chap83.html" class="btn"><h2>CHAPITRE 83</h2></a>
+    <a href="chap84.html" class="btn"><h2>CHAPITRE 84</h2></a>
+    <a href="chap85.html" class="btn"><h2>CHAPITRE 85</h2></a>
+    <a href="chap86.html" class="btn"><h2>CHAPITRE 86</h2></a>
+    <a href="chap87.html" class="btn"><h2>CHAPITRE 87</h2></a>
+    <a href="chap88.html" class="btn"><h2>CHAPITRE 88</h2></a>
+    <a href="chap89.html" class="btn"><h2>CHAPITRE 89</h2></a>
+    <a href="chap90.html" class="btn"><h2>CHAPITRE 90</h2></a>
+    <a href="chap91.html" class="btn"><h2>CHAPITRE 91</h2></a>
+    <a href="chap92.html" class="btn"><h2>CHAPITRE 92</h2></a>
+    <a href="chap93.html" class="btn"><h2>CHAPITRE 93</h2></a>
+    <a href="chap94.html" class="btn"><h2>CHAPITRE 94</h2></a>
+    <a href="chap95.html" class="btn"><h2>CHAPITRE 95</h2></a>
+    <a href="chap96.html" class="btn"><h2>CHAPITRE 96</h2></a>
+    <a href="chap97.html" class="btn"><h2>CHAPITRE 97</h2></a>
+    <a href="chap98.html" class="btn"><h2>CHAPITRE 98</h2></a>
+    <a href="chap99.html" class="btn"><h2>CHAPITRE 99</h2></a>
+    <a href="chap100.html" class="btn"><h2>CHAPITRE 100</h2></a>
     <a href="chap1050.html" class="btn"><h2>CHAPITRE 1050</a></h2>
     <a href="chap1051.html" class="btn"><h2>CHAPITRE 1051</a></h2>
     <a href="chap1052.html" class="btn"><h2>CHAPITRE 1052</a></h2>
