--- a/ac chap 1.html
+++ b/ac chap 1.html
@@ -28,6 +28,12 @@
     <CENTER><h1><font face="calibri">TOME 1</h1></CENTER>
         <br>
     <center>
+        <a><h1><font face="calibri">Sens de lecture japonais</font></h1></a>
+        <a><h2><font face="calibri">(Pour tout les tomes de Dragon Ball)</font></h2></a>
+        <br>
+        <img class="active" src="https://ideesalire.files.wordpress.com/2018/11/1626912_orig.jpg?w=180&h=253" width="390" height="">
+        <br>
+        <br>
         <img class="active" src="https://scansmangas.ws/scans/dragon-ball/1/1.jpg" width="779" height="1200">
         <br>
         <img class="active" src="https://scansmangas.ws/scans/dragon-ball/1/2.jpg" width="779" height="1200">
