--- a/nar1.html
+++ b/nar1.html
@@ -27,6 +27,10 @@
     <CENTER><h1><font face="calibri">TOME 1</h1></CENTER>
         <br>
     <center>
+        <a><h1><font face="calibri">Sens de lecture japonais</font></h1></a>
+        <a><h2><font face="calibri">(Pour tout les tomes de Naruto)</font></h2></a>
+        <br>
+        <img class="active" src="https://ideesalire.files.wordpress.com/2018/11/1626912_orig.jpg?w=180&h=253" width="380" height="">
         <img class="active" src="https://cdn.statically.io/img/opfrcdn.xyz/uploads/manga/naruto/chapters/Volume%201/000.jpg" height="1200">
         <br>
         <img class="active" src="https://cdn.statically.io/img/opfrcdn.xyz/uploads/manga/naruto/chapters/Volume%201/001.jpg" height="1200">
