--- a/test.html
+++ b/test.html
@@ -30,14 +30,18 @@
         </style>
     <CENTER><h1><font face="calibri">CHAPITRE 1 VF</font></h1></CENTER>
     <br>
-    <center>
+    <center> 
+        <a><h1><font face="calibri">Sens de lecture japonais</font></h1></a>
+        <a><h2><font face="calibri">(Pour tout les chapitres de One Pièce)</font></h2></a>
+        <br>
+        <img class="active" src="https://ideesalire.files.wordpress.com/2018/11/1626912_orig.jpg?w=180&h=253" width="380" height="">
+    <br>
+    <br>
     <img class="active" src="https://one-piece-manga.fr/comic/1/01.jpg" width="779" height="1200">
     <br>
     <img src="https://one-piece-manga.fr/comic/1/02.jpg">
     <br>
     <img src="https://one-piece-manga.fr/comic/1/03.jpg">
-    <br>
-    <img class="active" src="https://one-piece-manga.fr/comic/1/04.jpg" width="779" height="1200">
     <br>
     <img class="active" src="https://one-piece-manga.fr/comic/1/04.jpg" width="779" height="1200">
     <br>
@@ -86,8 +90,6 @@
     <img class="active" src="https://one-piece-manga.fr/comic/1/26.jpg" width="779" height="1200">
     <br>
     <img class="active" src="https://one-piece-manga.fr/comic/1/27.jpg" width="779" height="1200">
-    <br>
-    <img class="active" src="https://one-piece-manga.fr/comic/1/28.jpg" width="779" height="1200">
     <br>
     <img class="active" src="https://one-piece-manga.fr/comic/1/28.jpg" width="779" height="1200">
     <br>
