--- a/index.html
+++ b/index.html
@@ -11,8 +11,19 @@
        
          <br>
         <br>
-    <h1><font face="calibri">Mangas en VF</font></h1></center>
 
+        <div class="enLigne">
+          <div>
+            <p><a href="acceuil.html" class="btn"><h1><font face="calibri">Voir la liste des scans en VF</font></h1></a></p>
+            <p><a href="accueil animés.html" class="btn"><h1><font face="calibri">Voir la liste des animés</font></h1></a></p>
+            <img src="" alt="">
+          </div>
+            <div>
+            <p></p>
+            <img src="" alt="">
+          </div>
+        </div>
+        
     <style>
         body {
         background-image:url('https://cdn.discordapp.com/attachments/868578469213265970/997946302031745054/unknown.png');
@@ -41,53 +52,47 @@ a:link
 </style>
 
 <center>
-
-<h3><a href="les chaps.html" class="btn"><font face="calibri">ONE PIECE</font></a></h3>
-<h3><a href="les chaps ac.html" class="btn"><font face="calibri">DRAGON BALL</font></a></h3>
-<h3><a href="leschapsnaruto.html" class="btn"><font face="calibri">NARUTO</font></a></h3>
-
-<img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
-
-<h1><font face="calibri">Les dernières sorties</font> </h1>
-
-<h2><font face="calibri">ONE PIECE</font></h2>
-
-<h3><a href="chap1050.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1050</font></a></h3>
-<h3><a href="chap1051.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1051</font></a></h3>
-<h3><a href="chap1052.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1052</font></a></h3>
-<h3><a href="chap1053.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1053</font></a></h3>
-
-<img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
-
-<H2><font face="calibri">NARUTO</font></H2>
-
-<h3><a href="nar1.html" class="btn"><font face="calibri">Naruto VF TOME 1</font></a></h3>
-<h3><a href="nar2.html" class="btn"><font face="calibri">Naruto VF TOME 2</font></a></h3>
-<img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
 <br>
 <br>
 <br>
-<h2><font face="calibri">Nous soutenir en nous faisant un don</font></h2>
-<p><a href="https://www.paypal.com/myaccount/transfer/homepage/preview"target=_blank class="btn"><h3><font face="calibri">PayPal</font></h3></a></p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h3><font face="calibri">Nous soutenir en nous faisant un don</font></h3>
+<p><a href="https://www.paypal.com/myaccount/transfer/homepage/preview"target=_blank class="btn"><h4><font face="calibri">PayPal</font></h4></a></p>
 <img src="https://cdn.discordapp.com/attachments/888479569730998352/1002192035610116267/kisspng-paypal-logo-brand-font-payment-paypal-logo-icon-paypal-icon-logo-png-and-vecto-5b7f273deebfa6.7493516515350597739779-removebg-preview.png"width="120" height="80" /></p>
 
-<h2><font face="calibri">Soyez au courant des nouvelles</font></h2>
+<h3><font face="calibri">Soyez au courant des nouvelles</font></h3>
 
 <div class="enLigne">
     <div>
-      <p><a href="https://twitter.com/novanims"target=_blank class="btn"><h3><font face="calibri">Twitter</font></h3></a></p>
+      <p><a href="https://twitter.com/novanims"target=_blank class="btn"><h4><font face="calibri">Twitter</font></h4></a></p>
 <img src="https://cdn.discordapp.com/attachments/888479569730998352/998328276944695306/580b57fcd9996e24bc43c53e.png"width="55" height="50" /></p>
       <img src="" alt="">
     </div>
       <div>
-      <p><a href="https://discord.gg/mv7UekGg"target=_blank class="btn"><h3><font face="calibri">Discord</font></h3></a></p>
+      <p><a href="https://discord.gg/mv7UekGg"target=_blank class="btn"><h4><font face="calibri">Discord</font></h4></a></p>
 <img src="https://cdn.discordapp.com/attachments/888479569730998352/1002199200026595358/discord-removebg-preview_1.png"width="55" height="40" /></p>
       <img src="" alt="">
     </div>
   </div>
 
-<h2><font face="calibri">Nous contacter</font></h2>
-<a><h3><font face="calibri">novanims.pro@gmail.com</font></h3></a>
+<h3><font face="calibri">Nous contacter</font></h3>
+<a><h4><font face="calibri">novanims.pro@gmail.com</font></h4></a>
 
 </center>
 
