--- a/les chaps.html
+++ b/les chaps.html
@@ -130,7 +130,7 @@
     <a href="chap1052.html" class="btn"><h2>CHAPITRE 1052</a></h2>
     <a href="chap1053.html" class="btn"><h2>CHAPITRE 1053</a></h2>
     <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
-    <a href="index.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
+    <a href="acceuil.html" class="btn"><h2>Retourner à la liste des mangas</h2></a>
     <a href="index.html" class="btn"><h1>Revenir à l'acueil</font></h1></a>
     </center>
 </head>
