--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <div>
             <p><a href="acceuil.html" class="btn"><h1><font face="calibri">Voir la liste des scans en VF</font></h1></a></p>
             <p><a href="accueil animés.html" class="btn"><h1><font face="calibri">Voir la liste des animés</font></h1></a></p>
+            <img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="300" height="100" >
             <img src="" alt="">
           </div>
             <div>
@@ -23,6 +24,24 @@
             <img src="" alt="">
           </div>
         </div>
+        <h1><font face="calibri">Les dernières sorties</font> </h1>
+
+        <h1><font face="calibri">Scans</font></h1>
+
+<h2><font face="calibri">ONE PIECE</font></h2>
+
+
+<h3><a href="chap1053.5.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1053.5</font></a></h3>
+<h3><a href="chap1053.6.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1053.6</font></a></h3>
+<h3><a href="chap1053.7.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1053.7</font></a></h3>
+<h3><a href="chap1053.8.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1053.8</font></a></h3>
+<h3><a href="chap1054.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1054</font></a></h3>
+<h3><a href="chap1055.html" class="btn"><font face="calibri">One Pièce VF CHAPITRE 1055</font></a></h3>
+<img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
+
+<h1><font face="calibri">Animés</font></h1>
+<h3><a href="animés naruto.html" class="btn"><font face="calibri">Naruto épisode 1 à 10</font></a></h3>
+<img class="active" src="https://cdn.discordapp.com/attachments/868578469213265970/997950196044537906/Capture_25-removebg-preview.png" width="150" height="50" >
         
     <style>
         body {
@@ -53,28 +72,6 @@ a:link
 
 <center>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<h3><font face="calibri">Nous soutenir en nous faisant un don</font></h3>
-<p><a href="https://www.paypal.com/myaccount/transfer/homepage/preview"target=_blank class="btn"><h4><font face="calibri">PayPal</font></h4></a></p>
-<img src="https://cdn.discordapp.com/attachments/888479569730998352/1002192035610116267/kisspng-paypal-logo-brand-font-payment-paypal-logo-icon-paypal-icon-logo-png-and-vecto-5b7f273deebfa6.7493516515350597739779-removebg-preview.png"width="120" height="80" /></p>
 
 <h3><font face="calibri">Soyez au courant des nouvelles</font></h3>
 
@@ -90,6 +87,10 @@ a:link
       <img src="" alt="">
     </div>
   </div>
+
+  <h3><font face="calibri">Nous soutenir en nous faisant un don</font></h3>
+  <p><a href="https://www.paypal.com/myaccount/transfer/homepage/preview"target=_blank class="btn"><h4><font face="calibri">PayPal</font></h4></a></p>
+  <img src="https://cdn.discordapp.com/attachments/888479569730998352/1002192035610116267/kisspng-paypal-logo-brand-font-payment-paypal-logo-icon-paypal-icon-logo-png-and-vecto-5b7f273deebfa6.7493516515350597739779-removebg-preview.png"width="120" height="80" /></p>
 
 <h3><font face="calibri">Nous contacter</font></h3>
 <a><h4><font face="calibri">novanims.pro@gmail.com</font></h4></a>
